--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/secrets.yml
+
+public/loops/*
