--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore bundler config.
 /.bundle
 
+/public/loops/*
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
@@ -15,5 +17,3 @@
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/secrets.yml
-
-public/loops/*
